--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,8 +4,22 @@ body{
     padding: 0;
     margin: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
+    /* background-color: #f5f5f5; */
+    background-color: #fdf5e6;
+    /* background-color: #ecefec;
+    background-color: #fefffc;
+    background-color: #e7eae5; */
 }
+
+.form{
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(10px);
+}
+
+
 
 header{
     display: flex;
@@ -23,7 +37,25 @@ header{
 
 main{
     min-height: 100vh;
+    width: 100%;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+main table{
+    margin-top: 5px;
+    width: 80%;
+    text-align: center;
+    border-collapse: collapse;
+}
+
+table tr{
+    border: 1px solid gray;
+}
+
+
 
 footer{
     display: flex;
